--- a/hogar/package.json
+++ b/hogar/package.json
@@ -18,9 +18,10 @@
   },
   "dependencies": {
     "grunt": "^1.0.1",
-    "grunt-contrib-compass": "^1.1.1",
-    "grunt-contrib-cssmin": "^2.2.0",
     "grunt-contrib-jade": "^1.0.0",
+    "grunt-contrib-compass": "^1.1.1",
+    "grunt-contrib-cssmin": "^2.0.0",
+    "grunt-contrib-uglify": "^2.2.0",
     "grunt-contrib-watch": "^1.0.0"
   }
 }
